# bit-n

./: .gitattributes  .gitignore  CMakeLists.txt  IMPLEMENTATION.md  README.md  VISION.md  bitN  bitN_setup.sh
backend/codegen/: codegen.c  codegen.h
backend/linker/: linker_gen.c  linker_gen.h
docs/: IMPLEMENTATION.md  ROADMAP.md  VISION.md
examples/: basic.bitn  bit_manipulation.bitn  count_bits.bitn  extract_bits.bitn  gpio_example.bitn  stm32_integration.c
include/: ast.h  lexer.h  parser.h  rp2040.h  symbol_table.h  token.h  type_inference.h  type_system.h
include/core/: registers.h
include/isa/arm/: arm_decoder.h
mcu/rp2040/: INDEX.md  QUICK_REFERENCE.md  README.md  adc.bitn  dma.bitn  gpio.bitn  i2c.bitn  pwm.bitn  rp2040.ld  timer.bitn  uart.bitn
mcu/rp2040/examples/: pio.bitn  spi.bitn
mcu/rp2040/src/: rp2040.c
mcu/rp2350/: rp2350.ld
src/: ast.c  lexer.c  main.c  parser.c  symbol_table.c  token.c  type_inference.c  type_system.c
src/core/: execution.c  registers.c
tests/integration/: gpio_test.c  uart_test.c
tests/unit/: arm_decoder_test.c  memory_test.c
